# zfs-rs

./: .gitignore  Cargo.toml  Makefile  flake.nix  rust-toolchain.toml
binary/: Cargo.toml
binary/src/: lib.rs  reader.rs
enum-macros/: Cargo.toml
enum-macros-common/: Cargo.toml
enum-macros-common/src/: bitmask.rs  int_enum.rs  lib.rs
enum-macros/src/: int_enum.rs  lib.rs
nvlist/: Cargo.toml
nvlist/src/: internal.rs  lib.rs  nvlist.rs
src/zfs/: binary.rs  lib.rs  nvlist.rs  unix.rs
src/zfs-rs/: main.rs
src/zfs/vdev/: label.rs
xdr/: Cargo.toml
xdr-macros/: Cargo.toml
xdr-macros/src/: enum.rs  lib.rs
xdr/src/: lib.rs  primitive.rs  string.rs
zfs/: Cargo.toml
zfs-rs/: Cargo.toml
zfs-rs/src/: main.rs
zfs/src/: lib.rs  nvlist.rs  unix.rs  vdev.rs  xdr.rs
zfs/src/vdev/: label.rs  physical.rs
