[workspace]
resolver = "2"
members = [
    "binary",
    "enum-macros",
    "enum-macros-common",
    "nvlist",
    "xdr",
    "xdr-macros",
    "zfs",
    "zfs-rs",
]

[workspace.package]
version = "0.0.1"
authors = ["Tancredi Orlando <tancredi.orlando@gmail.com>"]
edition = "2021"
repository = "https://github.com/turlando/zfs-rs"
license = "CDDL-1.0"
