[package]
name = "xdr-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
binary = { path = "../binary" }
enum-macros-common = { path = "../enum-macros-common" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }
